--- a/app/src/main/res/layout/activity_view_room.xml
+++ b/app/src/main/res/layout/activity_view_room.xml
@@ -163,11 +163,12 @@
     <LinearLayout
         android:id="@+id/room_image_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/room_image"
+            android:src="@drawable/ic_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
