--- a/app/src/main/res/layout/activity_view_pc.xml
+++ b/app/src/main/res/layout/activity_view_pc.xml
@@ -147,6 +147,11 @@
                     android:text="Model:" />
 
                 <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="OS:" />
+
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingTop="5dp"
@@ -207,6 +212,12 @@
                 android:orientation="vertical">
                 <TextView
                     android:id="@+id/pc_model"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="----" />
+
+                <TextView
+                    android:id="@+id/pc_os"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="----" />
