--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -12,9 +12,18 @@
         android:textSize="15sp"
         android:textColor="@color/black"
         android:layout_alignParentLeft="true"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/ic_rigtharrow"
+        android:visibility="gone"
+        android:id="@+id/arrow"/>
     <EditText
         android:inputType="none"
         android:textIsSelectable="true"
+        android:focusable="false"
+        android:enabled="true"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:padding="15dp"
