--- a/app/src/main/res/layout/activity_view_inventory_report.xml
+++ b/app/src/main/res/layout/activity_view_inventory_report.xml
@@ -1,50 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10dp"
-    android:background="@color/white"
-    android:elevation="9dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg"
+    android:orientation="vertical"
     tools:context="com.example.avendano.cp_scan.Activities.ViewInventoryReport">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+    <!--signed status button sign if custodian-->
+    <RelativeLayout
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:paddingTop="5dp"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:paddingLeft="5dp"
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Signed By: "
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/text1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text"
+            android:paddingLeft="15dp"
+            android:text="Dean: " />
+
+        <TextView
+            android:paddingLeft="5dp"
+            android:id="@+id/dean"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text"
+            android:layout_toRightOf="@+id/text1"
+            android:text="-- " />
+
+        <TextView
+            android:id="@+id/text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text1"
+            android:paddingLeft="15dp"
+            android:text="Custodian: " />
+
+        <TextView
+            android:paddingLeft="5dp"
+            android:id="@+id/cust"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/dean"
+            android:layout_toRightOf="@+id/text2"
+            android:text="--" />
+
+        <TextView
+            android:id="@+id/text3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text2"
+            android:paddingLeft="15dp"
+            android:text="Technician: " />
+
+        <TextView
+            android:paddingLeft="5dp"
+            android:id="@+id/tech"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/cust"
+            android:layout_toRightOf="@+id/text3"
+            android:text="--" />
+        <TextView
+            android:paddingLeft="5dp"
+            android:id="@+id/text4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text3"
+            android:text="Report By: "
+            android:layout_marginTop="5dp"/>
+        <TextView
+            android:layout_marginTop="5dp"
+            android:id="@+id/reporter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tech"
+            android:layout_toRightOf="@+id/text4"
+            android:text="--" />
+        <TextView
+            android:paddingLeft="5dp"
+            android:id="@+id/text5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text4"
+            android:text="Room Custodian: "
+            android:layout_marginTop="5dp"/>
+        <TextView
+            android:layout_marginTop="5dp"
+            android:id="@+id/custodian"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/reporter"
+            android:layout_toRightOf="@+id/text5"
+            android:text="--" />
+
+        <Button
+            android:id="@+id/sign"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="5dp"
+            android:background="@color/darkorange"
+            android:text="Sign"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:visibility="gone"/>
+        <View
+            android:layout_below="@+id/text5"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/darkorange" />
+    </RelativeLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!--signed status button sign if custodian-->
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:background="@color/darkorange"
-                android:text="Sign"
-                android:textColor="@color/white"/>
-        </RelativeLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/darkorange"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"/>
-
         <!--list of pc with report details - expandable-->
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/inventory_details"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/inventory"
             android:padding="10dp">
 
         </android.support.v7.widget.RecyclerView>
     </LinearLayout>
 
 
-
-</ScrollView>
+</LinearLayout>
