--- a/app/src/main/res/layout/req_details.xml
+++ b/app/src/main/res/layout/req_details.xml
@@ -35,5 +35,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Request Status: "/>
+    <!--image view-->
 
 </LinearLayout>
