--- a/app/src/main/res/layout/fragment_schedule__page.xml
+++ b/app/src/main/res/layout/fragment_schedule__page.xml
@@ -8,21 +8,28 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Schedule Page"/>
+        android:text="Schedule Page" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_task_sched"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="5dp">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_task_sched"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_sched"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_margin="20dp"
-        android:src="@drawable/ic_add"
-        android:id="@+id/add_sched"/>
+        android:src="@drawable/ic_add" />
 </RelativeLayout>
