--- a/app/src/main/res/layout/fragment_room.xml
+++ b/app/src/main/res/layout/fragment_room.xml
@@ -7,6 +7,24 @@
     tools:context="com.example.avendano.cp_scan.Fragments.RoomFragment">
 
     <!-- TODO: Update blank fragment layout -->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/bg_spinner">
+
+        <Spinner
+            android:id="@+id/report_type"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="5dp"></Spinner>
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginBottom="5dp"
+        android:background="@color/darkorange" />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refresh"
