Viewing requested inventory report
done

--- a/app/src/main/res/layout/fragment_room.xml
+++ b/app/src/main/res/layout/fragment_room.xml
@@ -8,6 +8,8 @@
 
     <!-- TODO: Update blank fragment layout -->
     <RelativeLayout
+        android:id="@+id/spinner"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_margin="5dp"
@@ -25,6 +27,13 @@
         android:layout_height="1dp"
         android:layout_marginBottom="5dp"
         android:background="@color/darkorange" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone" />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refresh"
