--- a/app/src/main/res/layout/activity_pcassessment.xml
+++ b/app/src/main/res/layout/activity_pcassessment.xml
@@ -40,7 +40,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:checked="true"
                 android:text="Working" />
 
             <RadioButton
@@ -67,6 +66,7 @@
 
     <TextView
         android:id="@+id/instr"
+        android:visibility="gone"
         android:layout_below="@+id/view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
