--- a/app/src/main/res/layout/activity_assessment.xml
+++ b/app/src/main/res/layout/activity_assessment.xml
@@ -27,7 +27,7 @@
             android:layout_margin="5dp"
             android:background="@drawable/style_button_white"
             android:padding="4dp"
-            android:text="Scan"
+            android:text="Scan QR"
             android:textColor="@color/darkorange" />
 
         <TextView
